# stonkers

./: .dockerignore  .env.example  .gitignore  BUG_CHECKLIST.md  BUILD_PLAN.md  DATETIME_FIX.md  Dockerfile  Dockerfile.watchdog  FINAL_SETUP_STEPS.md  FIXES_APPLIED.md  IMPROVEMENTS.md  MIGRATION_SUMMARY.md  NEXT_STEPS.md  PHASE_COMPLETION.md  README.md  SETUP.md  compare_ema_rsi_fixes.py  compare_timeframes.py  config.yaml  diagnose_ema_rsi.py  instructions.md  migration_guide.md  pyproject.toml  requirements.txt  run.sh  run_backtest.py  strategies.md  sweep_bb_squeeze.py  test.sh  test_alpaca_connection.py
.claude/: CLAUDE.md
.claude/commands/: update-context.md
.github/workflows/: deploy.yml
analysis/: ema_rsi_fix_results.md  mtf_filter_impact.md  paper_vs_backtest.py  parameter_sweep_results.md  strategy_viability_report.md  timeframe_comparison.md
config/: bollinger_variants.yaml  live_safe.yaml  loose_params.yaml  monitoring.yaml  strategy_params.yaml  tuned_params.yaml
docs/: BOT_MONITORING.md  pre_live_checklist.md
scripts/: deploy-manual.sh  setup-pi.sh  start_bot_with_watchdog.sh  stonkers-watchdog.service
src/: dashboard.py  main.py  reports.py
src/analysis/: __init__.py  backtest_visualizer.py  dashboard_generator.py  ema_rsi_sweep.py  mtf_context.py  performance_analyzer.py  (+2 more)
static/: index.html  manifest.json  offline.html  sw.js
tests/: test_dashboard.py  test_health_monitor.py  test_models.py  test_momentum_thrust.py  test_paper_trader.py  test_risk_manager.py  test_support_resistance_breakout.py  test_vwap_mean_reversion.py
(+40 files in other folders)
